WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
192127
REGRESSION (
r234980
): Crash in -[WKWebView _restorePageStateToUnobscuredCenter:scale:]
https://bugs.webkit.org/show_bug.cgi?id=192127
Summary
REGRESSION (r234980): Crash in -[WKWebView _restorePageStateToUnobscuredCente...
Simon Fraser (smfr)
Reported
2018-11-28 17:34:39 PST
REGRESSION (
r234980
): Crash in -[WKWebView _restorePageStateToUnobscuredCenter:scale:]
Attachments
Patch
(1.75 KB, patch)
2018-11-28 17:37 PST
,
Simon Fraser (smfr)
no flags
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
Simon Fraser (smfr)
Comment 1
2018-11-28 17:37:23 PST
Created
attachment 355951
[details]
Patch
Simon Fraser (smfr)
Comment 2
2018-11-28 17:37:25 PST
<
rdar://problem/44194179
>
Tim Horton
Comment 3
2018-11-28 17:39:55 PST
Comment on
attachment 355951
[details]
Patch I swear I already fixed this bug...
Simon Fraser (smfr)
Comment 4
2018-11-28 17:52:21 PST
You diagnosed it!
Tim Horton
Comment 5
2018-11-28 19:39:54 PST
Oh man, I am a lazy bum. Why didn’t I write the patch!
WebKit Commit Bot
Comment 6
2018-11-28 19:54:39 PST
Comment on
attachment 355951
[details]
Patch Clearing flags on attachment: 355951 Committed
r238658
: <
https://trac.webkit.org/changeset/238658
>
WebKit Commit Bot
Comment 7
2018-11-28 19:54:40 PST
All reviewed patches have been landed. Closing bug.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug