REGRESSION (r234980): Crash in -[WKWebView _restorePageStateToUnobscuredCenter:scale:] https://bugs.webkit.org/show_bug.cgi?id=192127 rdar://problem/44194179

Reviewed by Tim Horton.

_restorePageStateToUnobscuredCenter: could receive an Optional<FloatRect> from the
web process, and unconditionally called .value() even though it may not be engaged.

No repro steps known, so no testcase.

* UIProcess/API/Cocoa/WKWebView.mm:
(-[WKWebView _restorePageStateToUnobscuredCenter:scale:]):


Canonical link: https://commits.webkit.org/206808@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@238658 268f45cc-cd09-0410-ab3c-d52691b4dbfc